--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "name": "brynhildr",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "^3.2.0",
+    "coffeescript": "1.12.7"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^2.10.1"
+  }
 }
