--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,7 @@
-development:
-  adapter: async
-
-test:
-  adapter: async
-
-production:
+redis: &redis
   adapter: redis
   url: redis://localhost:6379/1
-  channel_prefix: brynhildr_production
+
+development: *redis
+test: *redis
+production: *redis
