--- a/config/cable.yml
+++ b/config/cable.yml
@@ -2,6 +2,10 @@ redis: &redis
   adapter: redis
   url: redis://localhost:6379/1
 
+redis: &redis_heroku
+  adapter: redis
+  url: ENV['REDIS_URL']
+
 development: *redis
 test: *redis
 production: *redis
